Fatal error in Method::build_method_counters when called from libglass.so

XMLWordPrintable

      FULL PRODUCT VERSION :
      Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar
      java version "1.8.0_60"
      Java(TM) SE Runtime Environment (build 1.8.0_60-b27)
      Java HotSpot(TM) 64-Bit Server VM (build 25.60-b23, mixed mode)


      FULL OS VERSION :
      Linux oasis 3.19.0-28-generic #30-Ubuntu SMP Mon Aug 31 15:52:51 UTC 2015 x86_64 x86_64 x86_64 GNU/Linux

      A DESCRIPTION OF THE PROBLEM :
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007ff2ea47399d, pid=2489, tid=140678950463232
      #
      # JRE version: Java(TM) SE Runtime Environment (8.0_60-b27) (build 1.8.0_60-b27)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.60-b23 mixed mode linux-amd64 compressed oops)
      # Problematic frame:
      # V [libjvm.so+0x8a999d] Method::build_method_counters(Method*, Thread*)+0x2d
      #
      # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # An error report file with more information is saved as:
      # /home/morimekta/java_error_in_IDEA_2489.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      Aborted (core dumped)

      THE PROBLEM WAS REPRODUCIBLE WITH -Xint FLAG: Did not try

      THE PROBLEM WAS REPRODUCIBLE WITH -server FLAG: Did not try

      REGRESSION. Last worked in version 8u60

      STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
      Trying to open a Markdown file (.md) in intellij.

      EXPECTED VERSUS ACTUAL BEHAVIOR :
      Expected: The file opens in an editor.

      Actual: The JRE crashed with core dump.
      ERROR MESSAGES/STACK TRACES THAT OCCUR :
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007ff2ea47399d, pid=2489, tid=140678950463232
      #
      # JRE version: Java(TM) SE Runtime Environment (8.0_60-b27) (build 1.8.0_60-b27)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.60-b23 mixed mode linux-amd64 compressed oops)
      # Problematic frame:
      # V [libjvm.so+0x8a999d] Method::build_method_counters(Method*, Thread*)+0x2d
      #
      # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # An error report file with more information is saved as:
      # /home/morimekta/java_error_in_IDEA_2489.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      Aborted (core dumped)

      REPRODUCIBILITY :
      This bug can be reproduced always.

            Assignee:
            Vadim Pakhnushev
            Reporter:
            Webbug Group
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: