8137141: Fatal error in Method::build_method_counters when called from libglass.so

Reviewed-by: ddhill, kcr